# StudySync

./: .gitignore  README.md
ai-server/: README.md  REGENERATE.PY  client_ai.py  collect_data.py  main_ai.py  position_main.py  predictor.py  requirements.txt  test.py  test_posture.py  train_mlp.py  train_tcn.py
ai-server/Common/: Config.py  ConfigLoader.py  Inferencer.py  Packet.py  Protocol.py  PylonCamera.py  SerialCtrl.py  StationRunner.py  TcpClient.py  Visualizer.py
ai-server/Station1/: Station1Main.py
ai-server/Station2/: Station2Main.py
ai-server/Training/: TrainPatchcore.py  TrainYolo.py  TrainingConfig.py  TrainingMain.py
client/: .gitignore  CMakeLists.txt  README.md  StudySyncClient.sln  StudySyncClient.vcxproj  StudySyncClient.vcxproj.filters  packages.config
client/include/alert/: AlertDispatchThread.h  AlertManager.h  AlertQueue.h
client/include/analysis/: DummyAnalysisGenerator.h  IPoseAnalyzer.h  LocalMediaPipePoseAnalyzer.h  ZmqPoseAnalyzer.h
client/include/capture/: CaptureThread.h
client/include/core/: RingBuffer.h  ThreadSafeQueue.h  WorkerThreadPool.h
client/include/event/: EventQueue.h  EventShadowBuffer.h  PostureEventDetector.h
client/include/model/: Alert.h  AnalysisResult.h  AnalysisResultBuffer.h  Frame.h  PostureEvent.h  ReviewEvent.h  ReviewEventStore.h  ServerStatsSnapshot.h  SessionStatsHistory.h  ToastBuffer.h  User.h
client/include/network/: AiAnalyzeApi.h  AiAnalyzeThread.h  AiTcpClient.h  AuthApi.h  ClientTransportConfig.h  ClientTransportFactory.h  ConnectionState.h  ConsentStore.h  EventUploadThread.h  FeedbackApi.h  FpsStore.h  HeartbeatClient.h  HttpJsonlLogSink.h  IEventClipStore.h  IFrameSender.h  ILogSink.h  JsonlBatchUploader.h  LocalClaimCheckClipStore.h  LocalClipGarbageCollector.h  ReconnectPolicy.h  SessionApi.h  StatsApi.h  TokenStore.h  WinHttpClient.h  ZmqFrameSender.h  ZmqRecvThread.h  ZmqSendThread.h
client/include/render/: D2DRenderer.h  OverlayPainter.h  RenderThread.h
client/models/: face_detection.onnx  face_landmark.onnx
client/res/: StudySyncClient.rc  resource.h
client/src/alert/: AlertDispatchThread.cpp  AlertManager.cpp
client/src/analysis/: DummyAnalysisGenerator.cpp  LocalMediaPipePoseAnalyzer.cpp  ZmqPoseAnalyzer.cpp
client/src/app/: ClipsPanel.cpp  ClipsPanel.h  FpsDialog.cpp  FpsDialog.h  HomePanel.cpp  HomePanel.h  LoginDlg.cpp  LoginDlg.h  MainFrm.cpp  MainFrm.h  RegisterDlg.cpp  RegisterDlg.h  ReviewDlg.cpp  ReviewDlg.h  SettingsPanel.cpp  SettingsPanel.h  StatsPanel.cpp  StatsPanel.h  StudySyncClientApp.cpp  StudySyncClientApp.h  StudySyncClientView.cpp  StudySyncClientView.h  framework.h  pch.h
client/src/capture/: CaptureThread.cpp
client/src/core/: WorkerThreadPool.cpp
client/src/event/: EventShadowBuffer.cpp  PostureEventDetector.cpp
client/src/network/: AiAnalyzeApi.cpp  AiAnalyzeThread.cpp  AiTcpClient.cpp  AuthApi.cpp  ClientTransportConfig.cpp  ClientTransportFactory.cpp  ConnectionState.cpp  ConsentStore.cpp  EventUploadThread.cpp  FeedbackApi.cpp  FpsStore.cpp  HeartbeatClient.cpp  HttpJsonlLogSink.cpp  JsonlBatchUploader.cpp  LocalClaimCheckClipStore.cpp  LocalClipGarbageCollector.cpp  ReconnectPolicy.cpp  SessionApi.cpp  StatsApi.cpp  TokenStore.cpp  WinHttpClient.cpp  ZmqFrameSender.cpp  ZmqRecvThread.cpp  ZmqSendThread.cpp
client/src/render/: D2DRenderer.cpp  OverlayPainter.cpp  RenderThread.cpp
config/: config.json
dataset/distracted/: labels.csv
dataset/drowsy/: labels.csv
dataset/focus/: labels.csv
docs/: StudySync_Architecture.docx  ai_client_tcp_protocol.md  client_api_jwt_spec.md  client_server_mismatch.md  generate_pdf.py  generate_ppt.js  mockup_ui.html
docs/client/: .gitignore  2026-05-04_client_work_summary.md  2026-05-06_client_main_server_gap_analysis.md  2026-05-06_event_api_erd_request.md  2026-05-07_client_progress.md  StudySync_Client_Architecture_Report_정태현.docx  StudySync_Client_UI_Mockup.html  TODO.md  (+3 more)
integration/: README.md
main-server/: CMakeLists.txt  README.md  server_readme.md
main-server/common/: Protocol.h
main-server/include/core/: config.h  event_bus.h  event_types.h  logger.h  tcp_listener.h  tcp_utils.h
main-server/include/handler/: ack_sender.h  router.h  station_handler.h  train_handler.h
main-server/include/http/: error_response.h  http_server.h  jwt_middleware.h
main-server/include/http/controllers/: auth_controller.h  goal_controller.h  log_controller.h  log_ingest_controller.h  session_controller.h  stats_controller.h
main-server/include/monitor/: connection_registry.h  health_checker.h
main-server/include/security/: input_validator.h  ip_filter.h  json_safety.h
main-server/include/service/: focus_service.h  goal_service.h  inspection_service.h  log_service.h  posture_service.h  session_cleanup_worker.h  session_service.h  stats_service.h  train_service.h  user_service.h
main-server/include/session/: gui_notifier.h  gui_router.h  gui_service.h  gui_tcp_listener.h  session_manager.h
main-server/include/storage/: connection_pool.h  dao.h  db_manager.h  image_storage.h  password_hash.h
main-server/sql/: 2026-05-11_focus_logs_features.sql  alter_nullable.sql  schema.sql
main-server/src/core/: config.cpp  event_bus.cpp  main.cpp  tcp_listener.cpp
main-server/src/handler/: ack_sender.cpp  router.cpp  station_handler.cpp  train_handler.cpp
main-server/src/http/: http_server.cpp  jwt_middleware.cpp
main-server/src/http/controllers/: auth_controller.cpp  goal_controller.cpp  log_controller.cpp  log_ingest_controller.cpp  session_controller.cpp  stats_controller.cpp
main-server/src/monitor/: connection_registry.cpp  health_checker.cpp
main-server/src/service/: focus_service.cpp  inspection_service.cpp  log_service.cpp  posture_service.cpp  session_cleanup_worker.cpp  session_service.cpp  train_service.cpp  user_service.cpp
main-server/src/session/: gui_notifier.cpp  gui_router.cpp  gui_service.cpp  gui_tcp_listener.cpp  session_manager.cpp
main-server/src/storage/: connection_pool.cpp  dao.cpp  db_manager.cpp  image_storage.cpp  password_hash.cpp
(+16 files in other folders)
